Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-22142

Regression: 'Default build directory' option is ignored

XMLWordPrintable

    • Windows
    • 312c4a14339655ca6c80de0f8444ccf54931f68c (qt-creator/qt-creator/4.9)

      I set the next default build directory (Tool > Options > Build & Run > General > Build and Run > Default build directory):

      ../%{JS: Util.asciify("build/%{CurrentProject:Name}-%{CurrentKit:FileSystemName}-%{CurrentBuild:Name}")}

      But when i opened existed qbs project without .user file, Qt Creator ignores this change and suggests the next path:

      D:/path/to/projects/build-some_project-Qt_5_12_1_msvc2017-Debug

      instead of

      D:/path/to/projects/build/some_project-Qt_5_12_1_msvc2017-Debug

        For Gerrit Dashboard: QTCREATORBUG-22142
        # Subject Branch Project Status CR V

            kandeler Christian Kandeler
            semenpiskarev semenpiskarev
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes