QbsProjectManager: Fix default build directory

Commit a43331ba67 broke the build, and commit 4a3546f58a fixed it, but
used the wrong function.

Fixes: QTCREATORBUG-22142
Change-Id: I8a66bc8a4501f017726149544d73a728ab753e32
Reviewed-by: Eike Ziller <eike.ziller@qt.io>