src/plugins/qbsprojectmanager/qbsbuildconfiguration.cpp
@@ -71,7 +71,7 @@ static FileName defaultBuildDirectory(const QString &projectFilePath, const Kit 
     const QString projectName = QFileInfo(projectFilePath).completeBaseName();
     ProjectMacroExpander expander(projectFilePath, projectName, k, bcName, buildType);
     QString projectDir = Project::projectDirectory(FileName::fromString(projectFilePath)).toString();
-    QString buildPath = expander.expand(ProjectExplorerPlugin::defaultBuildDirectoryTemplate());
+    QString buildPath = expander.expand(ProjectExplorerPlugin::buildDirectoryTemplate());
     return FileName::fromString(FileUtils::resolvePath(projectDir, buildPath));
 }
 
